# PythonMidjourneyAPIClient

./: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  cli.py  config.example.json  fetch_intercept.js  pyproject.toml  requirements.txt  ws_intercept.js
.claude/: settings.local.json
docs/plans/: 2026-02-21-feature-additions-design.md  2026-02-21-feature-additions-plan.md
examples/: basic_usage.py
jsSnippet/: fetch_intercept.js  ws_intercept.js
midjourney/: __init__.py  api.py  auth.py  cli.py  client.py  exceptions.py  models.py
midjourney/params/: __init__.py  base.py  types.py  v7.py
midjourney_api/: __init__.py  api.py  auth.py  cli.py  client.py  const.py  exceptions.py  models.py
midjourney_api/params/: __init__.py  base.py  types.py  v7.py
