[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midjourney"
version = "0.1.0"
description = "Unofficial Python client for the Midjourney image generation API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "curl_cffi>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
login = ["playwright>=1.40"]

[project.scripts]
midjourney = "midjourney.cli:main"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = ["midjourney[login]"]

[tool.setuptools.packages.find]
include = ["midjourney*"]
