[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midjourney-api"
version = "0.1.0"
description = "Unofficial Python client for the Midjourney image generation API"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "curl_cffi>=0.7",
    "python-dotenv>=1.0",
    "playwright>=1.40",
]

[project.scripts]
midjourney = "midjourney_api.cli:main"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
include = ["midjourney_api*"]
